@@ -8,7 +8,6 @@ import com.yegor256.farea.Farea;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.DisabledOnOs;
@@ -25,15 +24,13 @@ final class MultiMojoTest {
     @Test
     @DisabledOnOs(OS.WINDOWS)
     void callsCustomPlugin(final @TempDir Path dir) throws IOException {
-        final Path local = Paths.get(System.getProperty("maven.repo.local"));
+        final Path local = Path.of(System.getProperty("maven.repo.local"));
         new Farea(dir).together(
             f -> {
-                f.files().file("src/main/resources/hello.txt").write(
-                    "Hello!".getBytes(StandardCharsets.UTF_8)
+                f.files().file("src/main/resources/multi.txt").write(
+                    "Multi!".getBytes(StandardCharsets.UTF_8)
                 );
-                f.properties()
-                    .set("project.build.sourceEncoding", "UTF-8")
-                    .set("project.reporting.outputEncoding", "UTF-8");
+                f.properties().set("project.build.sourceEncoding", "UTF-8");
                 f.build()
                     .plugins()
                     .appendItself(local)
@@ -47,9 +44,9 @@ final class MultiMojoTest {
                     "initialize"
                 );
                 final String log = f.files().log().content();
-                Assertions.assertTrue(log.contains("project.name: test"));
-                Assertions.assertTrue(log.contains("total goals: 1"));
-                Assertions.assertTrue(log.contains("message: Hello, друг!"));
+                Assertions.assertTrue(log.contains("[multi] project.name: test"));
+                Assertions.assertTrue(log.contains("[multi] total goals: 1"));
+                Assertions.assertTrue(log.contains("[multi] message: Hello, друг!"));
             }
         );
         Assertions.assertTrue(dir.toFile().exists());
